2002-02-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/bpo-18.d, ld-mmix/bpo64addr.ld, ld-mmix/bpo-18m.d,
	ld-mmix/bpo-9.s, ld-mmix/bpo-19.d, ld-mmix/bpo-19m.d,
	ld-mmix/bpo-10.s, ld-mmix/bpo-20.d, ld-mmix/bpo-20m.d: New tests
	for on-demand global register allocation.

2002-02-02  Alexandre Oliva  <aoliva@redhat.com>

	* ld-sh/shared-1.d: Fix incorrect offsets.

2002-02-01  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/bpo-1.d, ld-mmix/bpo-1.s, ld-mmix/bpo-1m.d,
	ld-mmix/bpo-15.d, ld-mmix/bpo-4.s, ld-mmix/bpo-6.d,
	ld-mmix/bpo-6.s, ld-mmix/bpo-2.d, ld-mmix/bpo-6m.d,
	ld-mmix/bpo-12m.d, ld-mmix/bpo-2m.d, ld-mmix/bpo-2.s,
	ld-mmix/bpo-5.s, ld-mmix/bpo-3.d, ld-mmix/start3.s,
	ld-mmix/bpo-3m.d, ld-mmix/bpo-9m.d, ld-mmix/bpo-4.d,
	ld-mmix/bpo-3.s, ld-mmix/bpo-4m.d, ld-mmix/bpo-7.d,
	ld-mmix/bpo-5.d, ld-mmix/bpo-16.d, ld-mmix/bpo-5m.d,
	ld-mmix/bpo-7m.d, ld-mmix/bpo-9.d, ld-mmix/bpo-8.d,
	ld-mmix/start4.s, ld-mmix/bpo-8m.d, ld-mmix/bpo-13m.d,
	ld-mmix/bpo-15m.d, ld-mmix/bpo-10.d, ld-mmix/bpo-11.d,
	ld-mmix/bpo-14m.d, ld-mmix/bpo-13.d, ld-mmix/bpo-7.s,
	ld-mmix/bpo-12.d, ld-mmix/bpo-16m.d, ld-mmix/bpo-14.d,
	ld-mmix/bpo-8.s, ld-mmix/bpo-17.d, ld-mmix/bpo-17m.d: New tests.

2002-01-31  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/weakref1.d, ld-cris/libdso-1.d, ld-cris/gotrel2.s,
	ld-cris/expdyn1.d, ld-cris/expdyn1.s, ld-cris/dso-1.s: New tests.
	* ld-cris/cris.exp: Split run_dump_tests in two parts, executing
	tests named *dso-*.d first and copying their tmpdir/dump to files
	named as the .d-file.

2002-01-31  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/crossref.exp: Allow foo to have a leading dot.
	* ld-scripts/cross1.t: Add .opd.
	* ld-undefined/undefined.exp: Allow leading dot on sym names.
	* lib/ld-lib.exp (default_ld_nm): Strip leading dots from syms.

2002-01-29  Chris Demetriou  <cgd@broadcom.com>

	* ld-mips-elf/emrelocs-eb.d: New file to test --embedded-relocs.
	* ld-mips-elf/emrelocs-el.d: Likewise. 
	* ld-mips-elf/emrelocs1.s: Likewise.