@@ -1,0 +1,5 @@
+SECTIONS
+{
+  .myinit : { KEEP (*(.myinit)) }
+  .mytext : { *(.mytext*) *(.text*) }
+}
