@@ -1,0 +1,6 @@
+SECTIONS
+{
+  . = 0x0;
+  .myinit : { KEEP (*(.myinit)) }
+  .mytext : { *(.mytext*) *(.text*) }
+}
